syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.catalog.proto.saga.v1";
option java_outer_classname = "CatalogSagaProto";
option objc_class_prefix = "RTG";

package catalog_saga_v1;

// Saga.Catalog.CreatePurchaseOrder
message CreatePurchaseOrderRequest {
  string saga_id = 1;
}

// Saga.Catalog.CreatePurchaseOrder.Reply
message CreatePurchaseOrderResponse {
  oneof response {
    CreatePurchaseOrderSuccessResponse success = 1;
    CreatePurchaseOrderFailedResponse failed = 2;
  }
}

message CreatePurchaseOrderSuccessResponse {
  string saga_id = 1;
}

message CreatePurchaseOrderFailedResponse {
  string saga_id = 1;
}

// Saga.Catalog.CreatePayment
message CreatePaymentRequest {
  string saga_id = 1;
}

// Saga.Catalog.CreatePayment.Reply
message CreatePaymentResponse {
  oneof response {
    CreatePaymentResponseSuccessResponse success = 1;
    CreatePaymentResponseFailedResponse failed = 2;
  }
}

message CreatePaymentResponseSuccessResponse {
  string saga_id = 1;
}

message CreatePaymentResponseFailedResponse {
  string saga_id = 1;
}
